# clicky

./: .buildinfo  .gitignore  LICENSE  README.md  context.html  genindex.html  identities.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  types.html
.doctrees/: context.doctree  environment.pickle  identities.doctree  index.doctree  types.doctree
.doctrees/backends/: base.doctree  discord.doctree  index.doctree  slack.doctree
.doctrees/frontends/: click.doctree  index.doctree
.github/workflows/: release.yml  tests.yml
_sources/: identities.rst.txt  index.rst.txt  types.rst.txt
_sources/backends/: discord.rst.txt  index.rst.txt
_sources/frontends/: click.rst.txt  index.rst.txt
backends/: base.html  discord.html  index.html  slack.html
clicky/: __init__.py  app.py  context.py  detect_run_string.py  logger.py  types.py
clicky/backends/: __init__.py  base.py  discord.py  slack.py
clicky/frontends/: __init__.py  click.py
docs/source/: conf.py  context.rst  identities.rst  index.rst
docs/source/backends/: base.rst  index.rst  slack.rst
frontends/: click.html  index.html
